--- a/style.css
+++ b/style.css
@@ -6,38 +6,64 @@
     * UCID: 30115576
 */
 
-body {
-    padding: 0px;
-    margin: 0px;
+/* applies border-box to every element! this way padding
+    doesn't affect width of elements
+*/
+* {
+    box-sizing: border-box;
 }
 
 .container {
     position: relative;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    background-repeat: no-repeat;
-    padding-top: 225px;
-    background-image: url("/assets/autumn-landscape-background.jpg");
-
+    display: inline-block; /* allows items to stack up on top*/ 
 }
 
-.healthBar {
+.healthbar-container {
     position: absolute;
     display: flex;
-    width: 50%;
+    width: 100%;
     align-items: center;
-    padding: 0px;
-}
+    padding: 20px;  
+} 
 
-.healthLayout {
+
+.outer-healthbar {
     position: relative;
     height: 30px;
     width: 100%;
 }
 
-.totalHealthBar {
+.player-health {
+    /* display: flex;
+    position: relative;
+    height: 30px;
+    width: 100%;
+    justify-content: flex-end;
+    background-color: green;
+    border: 3px solid black; */
+    background-color: red;
+    height: 30px;
+    width: 100%;
+}
+
+.healthbar {
+    position: absolute;
+    background: #818cf8;
+
+    /* take up full width and height of parent div*/
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+/* .healthLayout {
+    position: relative;
+    height: 30px;
+    width: 100%;
+} */
+
+/* .totalHealthBar {
     position: absolute;
     background-color: #5cf664;
     top: 0;
@@ -45,49 +71,40 @@ body {
     bottom: 0;
     left: 0;
     display: flex;
-}
+} */
 
 #timer {
-    background-color: rgb(255, 217, 0);
-    font-size: 35px;
+    /* font-size: 35px;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center; */
+    background-color: black;
+    width: 100px;
     height: 50px;
-    width: 75px;
     flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
+    border: 4px solid white;
 }
 
-#result {
+#result-message {
+    display: none;
     position: absolute;
-    font-size: 60px;
-    display: flex;
     justify-content: center;
-    color: wheat;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    align-items: center;
+    color: black;
+    inset: 0;
 }
 
-.game {
+/* .game {
     display: flex;
     width: 100%;
     align-items: center;
     justify-content: center;
-}
+} */
 
-#player1 {
-    position: relative;
-    left: 0px;
-    top: 70px;
-}
 
-#player2 {
-    position: relative;
-    transform: scaleX(-1);
-    right: 100px;
-    top: 70px;
-
-}
 
