--- a/style.css
+++ b/style.css
@@ -11,19 +11,33 @@
 */
 * {
     box-sizing: border-box;
+    font-family: 'Public Pixel', sans-serif;
 }
 
 .container {
+    /* allows items to stack up on top*/ 
     position: relative;
-    display: inline-block; /* allows items to stack up on top*/ 
+    display: flex; 
+    justify-content: center;
+    width: 100%;
+    /* position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-top: 50px; */
 }
 
 .healthbar-container {
     position: absolute;
-    display: flex;
-    width: 100%;
+    display: none;
+    width: 50%;
     align-items: center;
     padding: 20px;  
+    /* position: absolute;
+    display: none;
+    width: 50%;
+    align-items: center;
+    padding: 20px; */
 } 
 
 
@@ -31,6 +45,14 @@
     position: relative;
     height: 30px;
     width: 100%;
+    /* position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    border-top: 4px solid white;
+    border-left: 4px solid white;
+    border-bottom: 4px solid white; */
+
 }
 
 .player-health {
@@ -44,34 +66,28 @@
     background-color: red;
     height: 30px;
     width: 100%;
+    border: 2px solid black;
+
+
 }
 
 .healthbar {
     position: absolute;
-    background: #818cf8;
+    background: rgb(8, 180, 8);
 
     /* take up full width and height of parent div*/
-    top: 0;
+    /* top: 0;
     right: 0;
     bottom: 0;
-    width: 100%;
-}
-
-/* .healthLayout {
-    position: relative;
-    height: 30px;
-    width: 100%;
-} */
-
-/* .totalHealthBar {
-    position: absolute;
-    background-color: #5cf664;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    width: 100%; */
+    inset: 0;
     display: flex;
-} */
+    width: 100%;
+    border: 2px solid black;
+
+
+
+}
 
 #timer {
     /* font-size: 35px;
@@ -79,7 +95,8 @@
     display: flex;
     align-items: center;
     justify-content: center; */
-    background-color: black;
+    
+    background-color: rgb(65, 62, 62);
     width: 100px;
     height: 50px;
     flex-shrink: 0;
@@ -87,24 +104,72 @@
     align-items: center;
     justify-content: center;
     color: white;
-    border: 4px solid white;
+    border: 2px solid white;
 }
 
+
+
 #result-message {
-    display: none;
+    display: flex;
     position: absolute;
     justify-content: center;
     align-items: center;
     color: black;
     inset: 0;
+    font-size: 45px;
 }
 
-/* .game {
+#canvas-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.information {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+#instructions-title {
+    padding-bottom: 30px;
+    font-size: 20px;
+    text-decoration: underline;
+}
+
+.keyboard-instructions {
     display: flex;
     width: 100%;
+    justify-content: space-evenly;
+    font-size: 16px;
+}
+
+.keys {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    border: 2px solid black;
+    width: 404px;
+    padding: 10px;
+}
+
+
+#starting-screen {
+    position: absolute;
+    flex-direction: column;
+    color: white;
+    display: flex;
     justify-content: center;
-} */
+    align-items: center;
+    inset: 0;
+}
+
+#starting-screen h1 {
+    font-size: 50px;
+}
 
 
 
