--- a/style.css
+++ b/style.css
@@ -20,11 +20,6 @@
     display: flex; 
     justify-content: center;
     width: 100%;
-    /* position: relative;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding-top: 50px; */
 }
 
 .healthbar-container {
@@ -33,11 +28,6 @@
     width: 50%;
     align-items: center;
     padding: 20px;  
-    /* position: absolute;
-    display: none;
-    width: 50%;
-    align-items: center;
-    padding: 20px; */
 } 
 
 
@@ -45,24 +35,9 @@
     position: relative;
     height: 30px;
     width: 100%;
-    /* position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    border-top: 4px solid white;
-    border-left: 4px solid white;
-    border-bottom: 4px solid white; */
-
 }
 
 .player-health {
-    /* display: flex;
-    position: relative;
-    height: 30px;
-    width: 100%;
-    justify-content: flex-end;
-    background-color: green;
-    border: 3px solid black; */
     background-color: red;
     height: 30px;
     width: 100%;
@@ -74,27 +49,13 @@
 .healthbar {
     position: absolute;
     background: rgb(8, 180, 8);
-
-    /* take up full width and height of parent div*/
-    /* top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%; */
     inset: 0;
     display: flex;
     width: 100%;
     border: 2px solid black;
-
-
-
 }
 
 #timer {
-    /* font-size: 35px;
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center; */
     
     background-color: rgb(65, 62, 62);
     width: 100px;
@@ -107,17 +68,47 @@
     border: 2px solid white;
 }
 
+#game-over-container {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    inset: 0;
+}
 
 
 #result-message {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
     color: black;
-    inset: 0;
     font-size: 45px;
 }
+
+#replay-button {
+    background-color: red;
+    border: 4px solid black;
+    width: 200px;
+    height: 80px;
+    animation: pulse 0.9s infinite;
+    font-size: 25px;
+}
+
+#replay-button:hover {
+    background-color: yellow;
+}
+
+@keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    70% {
+      transform: scale(.9);
+    }
+    100% {
+      transform: scale(1);
+    }
+}
+
 
 #canvas-container {
     display: flex;
