added part 2 to file

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
     * Course: SENG 513
     * Date: Oct 23, 2023
-    * Assignment 2
+    * Assignment 2 - Part 2
     * Name: Anish Pokhrel
     * UCID: 30115576
 */
